<resources>
    <string name="app_name">Events24</string>
    <string name="log_in">Login</string>
    <string name="login_description_1">All tickets on one place.</string>
    <string name="login_description_2">Whether you enjoy city breaks or extended holidays in the sun, you can always improve your travel experiences by staying in a small.</string>
    <string name="button_login">Login</string>
    <string name="button_register">Sign up</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="or">or</string>
    <string name="register">Register</string>
    <string name="confirm_password">Confirm password</string>
    <string name="send_to_email">Send to email</string>
    <string name="text_check_email">Check your email!</string>
    <string name="menu_home">Home</string>
    <string name="menu_search">Search</string>
    <string name="menu_tickets">Tickets</string>
    <string name="menu_profile">Profile</string>
    <string name="menu_favorites">Favorites</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="show_more">Show more</string>
    <string name="text_top_events">Top Events</string>
    <string name="text_concerts">Concerts</string>
    <string name="text_theatre">Theatre</string>
    <string name="text_sport">Sport</string>
    <string name="text_recent_events">Recent events</string>
    <string name="text_artists">Artists</string>
    <string name="text_help_center">Help center</string>
    <string name="button_show_more">Show more</string>
    <string name="hint_search">Search</string>
    <string name="button_log_out">Log out</string>
    <string name="settings">Settings</string>
    <string name="notifications">Notifications</string>
    <string name="text_language">Language</string>
    <string name="support">Support</string>
    <string name="terms_and_conditions">Terms and conditions</string>
    <string name="save">Save</string>
    <string name="name">Name</string>
    <string name="surname">Surname</string>
    <string name="password">Password</string>
    <string name="email">E-mail</string>
    <string name="city">City</string>
    <string name="address">Address</string>
    <string name="phone">Phone</string>
    <string name="dialog_pick_image_title">Pick image</string>
    <string name="dialog_pick_image_message">Please, select image destination</string>
    <string name="dialog_pick_image_gallery">Gallery</string>
    <string name="dialog_pick_image_camera">Camera</string>
    <string name="dialog_permission_title">Permission needed</string>
    <string name="dialog_permission_storage_message">This permission is required if you want to access your storage.</string>
    <string name="dialog_permission_camera_message">This permission is required if you want to access your camera.</string>
    <string name="ok">ok</string>
    <string name="cancel">cancel</string>
    <string name="toast_user_successfully_uploaded">Profile info successfully uploaded.</string>

    <string name="ticket">Ticket</string>
    <string name="pictures_and_video">Pictures and video</string>
    <string name="about_artist">About artist</string>
    <string name="news">News</string>
    <string name="all">All</string>

    <string-array name="languages">
        <item>English</item>
        <item>Serbian</item>
    </string-array>
</resources>