<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/purple"
    tools:context=".ui.activity.registration.MainRegistrationActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:layout_gravity="top"
        android:scaleType="centerCrop"
        android:src="@drawable/login_background" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:padding="@dimen/margin_main"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login_description_1"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size_biggest"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_main"
            android:text="@string/login_description_2"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size_normal" />

        <Button
            android:id="@+id/buttonLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_main"
            android:text="@string/button_login"
            android:background="@drawable/background_button"
            android:textAllCaps="false"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/buttonRegistration"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/button_register"
            android:layout_marginTop="8dp"
            android:textAllCaps="false"
            android:background="@drawable/background_button_transparent"
            android:textColor="@color/white" />

    </LinearLayout>

</FrameLayout>