<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/purple_dark"
    android:orientation="vertical"
    android:padding="@dimen/margin_medium"
    tools:context=".ui.fragment.SearchFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_medium"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/buttonAll"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/margin_small"
            android:background="@drawable/background_button_purple"
            android:gravity="center"
            android:padding="@dimen/margin_small"
            android:text="@string/all"
            android:ems="3"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size_normal" />

        <TextView
            android:id="@+id/buttonConcerts"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/margin_small"
            android:background="@drawable/background_button_purple_dark_2"
            android:gravity="center"
            android:padding="@dimen/margin_small"
            android:text="@string/text_concerts"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size_normal" />

        <TextView
            android:id="@+id/buttonTheatres"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/margin_small"
            android:background="@drawable/background_button_purple_dark_2"
            android:gravity="center"
            android:padding="@dimen/margin_small"
            android:text="@string/text_theatre"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size_normal" />

        <TextView
            android:id="@+id/buttonSport"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/margin_medium"
            android:background="@drawable/background_button_purple_dark_2"
            android:gravity="center"
            android:padding="@dimen/margin_small"
            android:text="@string/text_sport"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size_normal" />

    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/margin_main" />
</LinearLayout>